# Jack-in-a-Box

./: README.md
MachineLib/: Banner.cpp  Banner.h  Box.cpp  Box.h  CMakeLists.txt  Cam.cpp  Cam.h  Component.cpp  Component.h  Crank.cpp  Crank.h  IKeyDropListener.cpp  IKeyDropListener.h  IRotationSink.cpp  IRotationSink.h  Machine.cpp  Machine.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.cpp  Machine2Factory.h  MachineSystem.cpp  MachineSystem.h  Pulley.cpp  Pulley.h  RotationSource.cpp  RotationSource.h  Shaft.cpp  Shaft.h  Sparty.cpp  Sparty.h
